[package]
name = "actix-mongodb-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.3.1"
tokio = "1.22.0"
futures = "0.3"
serde = "1.0"
actix = "0.13"
actix-web = "4.2"
actix-web-actors = "4.1"